--- a/register.html
+++ b/register.html
@@ -9,11 +9,12 @@
 <body>
     <h1>Register a new account</h1>
     <form id="register">
-        <input type="text" placeholder="enter your username" required>
+        <input type="text" placeholder="enter your username" required name="username">
         <input type="email" placeholder="enter your email" required>
-        <input type="password" placeholder="enter your password" required>
+        <input type="password" placeholder="enter your password" required name="password">
         <button type="submit"> submit</button>
     </form>
+    <h1 id="message"></h1>
     <div>
         <a href="./index.html">home</a>
         <a href="./login.html">Login</a>
